fix overflowX

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
 }
 body {
   font-family: var(--primary-font);
+  overflow-x: hidden;
 }
 
 .custom-btn {
